--- a/aviris_data_exploration.ipynb
+++ b/aviris_data_exploration.ipynb
@@ -466,6 +466,119 @@
     "    print('Shape of hyperspectral data:', hyperspectral_data.shape)\n",
     "    print('Number of bands:', src.count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Brouillon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import xlrd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of hyperspectral data: (2135, 769, 224)\n",
+      "Number of bands: 224\n",
+      "Wavelengths: [365.9298, 375.594, 385.2625, 394.9355, 404.6129, 414.2946, 423.9808, 433.6713, 443.3662, 453.0655, 462.7692, 472.4773, 482.1898, 491.9066, 501.6279, 511.3535, 521.0836, 530.818, 540.5568, 550.3, 560.0477, 569.7996, 579.556, 589.3168, 599.0819, 608.8515, 618.6254, 628.4037, 638.1865, 647.9736, 657.7651, 667.561, 655.7923, 665.5994, 675.4012, 685.1979, 694.9894, 704.7756, 714.5566, 724.3325, 734.1031, 743.8685, 753.6287, 763.3837, 773.1335, 782.8781, 792.6174, 802.3516, 812.0805, 821.8043, 831.5228, 841.2361, 850.9442, 860.6471, 870.3448, 880.0372, 889.7245, 899.4066, 909.0834, 918.7551, 928.4214, 938.0827, 947.7387, 957.3895, 967.0351, 976.6755, 986.3106, 995.9406, 1005.565, 1015.185, 1024.799, 1034.408, 1044.012, 1053.611, 1063.204, 1072.793, 1082.376, 1091.954, 1101.526, 1111.094, 1120.656, 1130.213, 1139.765, 1149.311, 1158.853, 1168.389, 1177.92, 1187.446, 1196.966, 1206.482, 1215.992, 1225.497, 1234.996, 1244.491, 1253.98, 1263.464, 1253.373, 1263.346, 1273.318, 1283.291, 1293.262, 1303.234, 1313.206, 1323.177, 1333.148, 1343.119, 1353.089, 1363.06, 1373.03, 1383.0, 1392.969, 1402.939, 1412.908, 1422.877, 1432.845, 1442.814, 1452.782, 1462.75, 1472.718, 1482.685, 1492.652, 1502.619, 1512.586, 1522.552, 1532.518, 1542.484, 1552.45, 1562.416, 1572.381, 1582.346, 1592.311, 1602.275, 1612.24, 1622.204, 1632.167, 1642.131, 1652.094, 1662.057, 1672.02, 1681.983, 1691.945, 1701.907, 1711.869, 1721.831, 1731.792, 1741.753, 1751.714, 1761.675, 1771.635, 1781.596, 1791.556, 1801.515, 1811.475, 1821.434, 1831.393, 1841.352, 1851.31, 1861.269, 1871.227, 1872.384, 1866.864, 1876.925, 1886.985, 1897.042, 1907.096, 1917.148, 1927.198, 1937.246, 1947.292, 1957.335, 1967.375, 1977.414, 1987.45, 1997.484, 2007.515, 2017.545, 2027.572, 2037.596, 2047.619, 2057.639, 2067.656, 2077.672, 2087.685, 2097.696, 2107.704, 2117.71, 2127.714, 2137.716, 2147.715, 2157.712, 2167.707, 2177.699, 2187.689, 2197.677, 2207.662, 2217.645, 2227.626, 2237.604, 2247.581, 2257.554, 2267.526, 2277.495, 2287.462, 2297.427, 2307.389, 2317.349, 2327.307, 2337.262, 2347.216, 2357.167, 2367.115, 2377.061, 2387.005, 2396.947, 2406.886, 2416.823, 2426.758, 2436.69, 2446.62, 2456.548, 2466.473, 2476.396, 2486.317, 2496.236]\n"
+     ]
+    }
+   ],
+   "source": [
+    "header_file = 'sandiego/sandiego_ort.hdr'\n",
+    "#Open the image with spectral\n",
+    "header_spectral = spectral.open_image(header_file)\n",
+    "\n",
+    "# Access the wavelengths associated with each band\n",
+    "wavelengths = header_spectral.bands.centers\n",
+    "\n",
+    "# Display information about the hyperspectral data and wavelengths\n",
+    "print('Shape of hyperspectral data:', header_spectral.shape)\n",
+    "print('Number of bands:', header_spectral.shape[2])\n",
+    "print('Wavelengths:', wavelengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/dev/DTDNML/sandiego/Landsat8_BGRI_SRF.xls\n",
+      "[Sheet  0:<BGRI>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.36e+02,  1.00e-05,  0.00e+00,  0.00e+00,  0.00e+00],\n",
+       "       [ 4.37e+02,  6.10e-05,  0.00e+00,  0.00e+00,  0.00e+00],\n",
+       "       [ 4.38e+02,  1.17e-04,  0.00e+00,  0.00e+00,  0.00e+00],\n",
+       "       ...,\n",
+       "       [ 8.98e+02,  0.00e+00,  0.00e+00,  0.00e+00, -5.00e-05],\n",
+       "       [ 8.99e+02,  0.00e+00,  0.00e+00,  0.00e+00, -8.40e-05],\n",
+       "       [ 9.00e+02,  0.00e+00,  0.00e+00,  0.00e+00, -1.00e-04]],\n",
+       "      shape=(465, 5))"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xls_path = os.path.join(os.getcwd(), 'sandiego', 'Landsat8_BGRI_SRF' + '.xls')\n",
+    "print(xls_path)\n",
+    "if not os.path.exists(xls_path):\n",
+    "    raise Exception(\"Spectral response path does not exist!\")\n",
+    "data = xlrd.open_workbook(xls_path)\n",
+    "print(data.sheets())\n",
+    "srf = data.sheets()[0]\n",
+    "# print(np.array(srf.col_values(0)).shape)\n",
+    "# print([np.array(srf.col_values(i)).reshape(-1,1) for i in range(srf.ncols)])\n",
+    "srf_arr = np.array([np.array(srf.col_values(i)).reshape(-1,1) for i in range(srf.ncols)])\n",
+    "srf_arr = np.array([srf.col_values(i) for i in range(srf.ncols)]).T\n",
+    "srf_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 465, 1)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "srf_arr.shape"
+   ]
   }
  ],
  "metadata": {
