--- a/aviris_data_exploration.ipynb
+++ b/aviris_data_exploration.ipynb
@@ -562,22 +562,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5, 465, 1)"
+       "'NVIDIA GeForce RTX 4070 Laptop GPU'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "srf_arr.shape"
+    "torch.cuda.get_device_name(0)"
    ]
   }
  ],
