--- a/aviris_data_exploration.ipynb
+++ b/aviris_data_exploration.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,16 +571,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'NVIDIA GeForce RTX 4070 Laptop GPU'"
+       "'NVIDIA GeForce RTX 3070 Ti'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
