--- a/DTDNML_testing.ipynb
+++ b/DTDNML_testing.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "cd415e1b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rec for reconstructed\n",
     "filepath = 'rec/'\n",
     "filenames = ['rec_hrhsi','rec_lrhsi','rec_hrmsi','real_hhsi','real_lrhsi','real_hrmsi','rec_hsi_lrhsi','rec_hsi_hrmsi']\n",
     "\n",
